--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,12 +9,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  google_fonts: ^6.1.0
   test: ^1.24.9
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 flutter:
    uses-material-design: true
