--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^6.1.0
+  provider: ^6.1.1
   shared_preferences: ^2.2.2
   test: ^1.24.9
 
