--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_map: ^6.1.0
+  flutter_map_cancellable_tile_provider: ^2.0.0
+  geolocator: ^10.1.0
   google_fonts: ^6.1.0
+  latlong2: ^0.9.0
+  location: ^5.0.3
   provider: ^6.1.1
   shared_preferences: ^2.2.2
   test: ^1.24.9
