--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   flutter_map: ^6.1.0
   flutter_map_cancellable_tile_provider: ^2.0.0
+  flutter_map_location_marker: ^8.0.5
   geolocator: ^10.1.0
   google_fonts: ^6.1.0
   latlong2: ^0.9.0
