--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
   sdk: '>=3.2.1 <4.0.0'
 
 dependencies:
+  cloud_firestore: ^4.15.5
+  firebase_core: ^2.25.4
   flutter:
     sdk: flutter
   flutter_map: ^6.1.0
