--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   cloud_firestore: ^4.15.5
+  firebase_auth: ^4.17.6
   firebase_core: ^2.25.4
   flutter:
     sdk: flutter
