--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,7 +24,8 @@ if (flutterVersionName == null) {
 
 android {
     namespace "com.example.p12_basic_widgets"
-    compileSdkVersion flutter.compileSdkVersion
+    compileSdkVersion 33
+ //   compileSdkVersion flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
 
     compileOptions {
@@ -41,6 +42,7 @@ android {
     }
 
     defaultConfig {
+        multiDexEnabled true
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.p12_basic_widgets"
         // You can update the following values to match your application needs.
@@ -51,6 +53,14 @@ android {
         versionName flutterVersionName
         // multiDexEnabled: true
     }
+     compileOptions {
+    // Flag to enable support for the new language APIs
+    coreLibraryDesugaringEnabled true
+    // Sets Java compatibility to Java 8
+    sourceCompatibility JavaVersion.VERSION_1_8
+    targetCompatibility JavaVersion.VERSION_1_8
+  }
+
 
     buildTypes {
         release {
@@ -65,4 +75,10 @@ flutter {
     source '../..'
 }
 
-dependencies {}
+dependencies {
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
+    implementation 'androidx.window:window:1.0.0'
+    implementation 'androidx.window:window-java:1.0.0'
+}
+
+
