--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   firebase_messaging: ^14.7.17
   flutter:
     sdk: flutter
+  flutter_local_notifications: ^16.3.3
   flutter_map: ^6.1.0
   flutter_map_cancellable_tile_provider: ^2.0.0
   flutter_map_location_marker: ^8.0.5
@@ -26,6 +27,7 @@ dependencies:
   provider: ^6.1.1
   shared_preferences: ^2.2.2
   test: ^1.24.9
+  vibration: ^1.8.4
 
 dev_dependencies:
   flutter_test:
