--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: p12_basic_widgets
 description: "A new Flutter project."
 publish_to: 'none'
-version: 0.1.0
+version: 0.1.1+6
 
 environment:
   sdk: '>=3.2.1 <4.0.0'
